--- a/cottart.css
+++ b/cottart.css
@@ -37,7 +37,7 @@ header p {
   margin-bottom: 2rem;
 }
 
-/* Section d'introduction   */
+/* Section introduction   */
 
 #about {
   text-align: center;
