Correct French translation in cottart.css

--- a/cottart.css
+++ b/cottart.css
@@ -70,7 +70,7 @@ header p {
   background-color: #004a9e;
 }
 
-/* Galerie d'œuvres              */
+/* Galerie des œuvres */
 
 main {
   display: grid;
