--- a/cottart.css
+++ b/cottart.css
@@ -12,7 +12,7 @@ body {
   line-height: 1.6;
 }
 
-/* En-tête                       */
+/* Haut de page */
 
 header {
   text-align: center;
@@ -37,7 +37,7 @@ header p {
   margin-bottom: 2rem;
 }
 
-/* Section introduction   */
+/*  Introduction   */
 
 #about {
   text-align: center;
@@ -113,7 +113,7 @@ main {
   font-size: 0.95rem;
 }
 
-/* Pied de page                  */
+/* Footer / Bas/Pied de page */
 
 footer {
   background-color: #001b3a;
@@ -159,7 +159,7 @@ footer ul li a:hover {
 }
 
 /* ----------------------------- */
-/* Responsive Design             */
+/* Design version responsive            */
 /* ----------------------------- */
 
 @media (max-width: 768px) {
