--- a/cottart.css
+++ b/cottart.css
@@ -7,9 +7,9 @@
 
 body {
   font-family: "Helvetica Neue", Arial, sans-serif;
-  color: #333;
-  background-color: #fff;
-  line-height: 1.6;
+  color: #349;
+  background-color: #ffff;
+  line-height: 1.5;
 }
 
 /* Haut de page */
