--- a/cottart.css
+++ b/cottart.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: "Helvetica Neue", Arial, sans-serif;
+  font-family: "montessera", Arial, sans-serif;
   color: #333;
   background-color: #fff;
   line-height: 1.6;
