Change footer background color from #001b3a to #030642

--- a/cottart.css
+++ b/cottart.css
@@ -125,7 +125,7 @@ main {
 /* Footer / Bas/Pied de page */
 
 footer {
-  background-color: #001b3a;
+  background-color: #030642;
   color: white;
   padding: 2rem 1rem;
   text-align: center;
