--- a/cottart.css
+++ b/cottart.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: "montessera", Arial, sans-serif;
-  color: #333;
+  color: #fff;
   background-color: #fff;
   line-height: 1.6;
 }
