Adjust header background position in cottart.css

--- a/cottart.css
+++ b/cottart.css
@@ -17,6 +17,7 @@ header{
     background-image: url(Images/angedechu.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center 60%;
 }
 
 .container1{
