--- a/cottart.css
+++ b/cottart.css
@@ -82,7 +82,24 @@ h1 {
   background-color: #004a9e;
 }
 
+/* Bouton */
+.featured button {
+    margin-top: 15px;
+    background-color: #2336a3;
+    color: white;
+    border: none;
+    padding: 10px 18px;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.featured button:hover {
+    background-color: #384bcc;
+
 /* Galerie des œuvres */
+
+
 
 main {
   gap: 2rem;
