--- a/cottart.css
+++ b/cottart.css
@@ -11,9 +11,7 @@ body {
   line-height: 1.6;
 }
 
-/* =====================
-   HAUT DE PAGE
-===================== */
+/* HAUT DE PAGE */
 
 header {
   background-image: url(Images/angedechu.jpg);
@@ -90,9 +88,7 @@ h1 {
   background-color: #004a9e;
 }
 
-/* =====================
-   BOUTON FEATURED
-===================== */
+/* BOUTON FEATURED */
 
 .featured button {
   margin-top: 15px;
@@ -109,9 +105,7 @@ h1 {
   background-color: #384bcc;
 }
 
-/* =====================
-   GALERIE DES ŒUVRES
-===================== */
+/* GALERIE DES ŒUVRES */
 
 main {
   gap: 2rem;
@@ -159,9 +153,7 @@ main {
   font-size: 0.95rem;
 }
 
-/* =====================
-   FOOTER
-===================== */
+/* FOOTER */
 
 footer {
   background-color: #030642;
@@ -206,9 +198,7 @@ footer ul li a:hover {
   color: #4a66ff;
 }
 
-/* =====================
-   RESPONSIVE
-===================== */
+/*  RESPONSIVE */
 
 @media (max-width: 768px) {
   header h1 {
