--- a/cottart.css
+++ b/cottart.css
@@ -98,7 +98,7 @@ h1 {
 
 .featured button {
   margin-top: 15px;
-  background-color: #2336a3;
+  background-color: #030642;
   color: white;
   border: none;
   padding: 10px 18px;
