--- a/cottart.css
+++ b/cottart.css
@@ -1,9 +1,4 @@
 /*doctype css*/
-
-html {
-  scroll-behaviour: smooth;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -49,6 +44,34 @@ nav ul li {
   color: inherit;
   cursor: pointer;
 }
+
+/* Défilement fluide */
+html {
+  scroll-behavior: smooth;
+}
+
+/* Style des liens du menu */
+nav ul li a {
+  text-decoration: none; /* Enlève le soulignement */
+  color: inherit; /* Prend la couleur du texte parent */
+  cursor: pointer;
+}
+
+/* Supprime la couleur violette des liens visités */
+nav ul li a:visited {
+  color: inherit;
+}
+
+/* Effet au survol */
+nav ul li a:hover {
+  opacity: 0.7; /* Ou une autre couleur de ton choix */
+}
+
+/* Couleur du lien actif */
+nav ul li a:active {
+  color: inherit;
+}
+
 
 h1 {
   margin-top: -30px;
