--- a/cottart.css
+++ b/cottart.css
@@ -39,7 +39,7 @@ nav ul {
 
 nav ul li {
   list-style: none;
-  color: #fff;
+  color: #fffff;
   text-decoration: none;
   color: inherit;
   cursor: pointer;
@@ -53,7 +53,7 @@ html {
 /* Style des liens du menu */
 nav ul li a {
   text-decoration: none; /* Enlève le soulignement */
-  color: inherit; /* Prend la couleur du texte parent */
+  color: #ff; /* Prend la couleur du texte parent */
   cursor: pointer;
 }
 
@@ -69,7 +69,7 @@ nav ul li a:hover {
 
 /* Couleur du lien actif */
 nav ul li a:active {
-  color: inherit;
+  color: #ffffff;
 }
 
 
